--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ path.current-floor {
   color: #635854;
   text-transform: uppercase;
 }
-.counter {
+.counter-floor {
   color: #635854;
   font-size: 124px;
   font-family: "Bebas Neue", sans-serif;
@@ -119,4 +119,99 @@ path.current-floor {
   border: none;
   padding: 16px 36px;
   cursor: pointer;
+}
+.modal {
+  position: fixed; /* фиксированная позиция, поверх всего сайта*/
+  left: 0; /* приклеиваем к лнвому краю */
+  top: 0; /* приклеиваем к верху */
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); /* полупрозрачный черный фоновый цвет */
+  display: flex; /* родительский элемент - гибкий */
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transform: scale(0);
+  transition: opacity 0.2s;
+}
+.is-open {
+  opacity: 1;
+  transform: scale(1);
+}
+.modal-dialog {
+  max-width: 1000px;
+  min-height: 565px;
+  background-color: #fff;
+  flex-grow: 1;
+  display: flex;
+  position: relative;
+  transform: translateY(-10%);
+  transition: transform 0.2s, opacity 0.2s;
+  transition-delay: 0.2s;
+  opacity: 0;
+}
+.is-open > .modal-dialog {
+  opacity: 1;
+  transform: translateY(0);
+}
+.modal-image {
+  background-color: #ebebeb;
+  width: 60%;
+  text-align: center;
+  padding: 50px;
+}
+
+.flats path {
+  opacity: 0;
+  cursor: pointer;
+}
+.flats path:hover {
+  opacity: 1;
+}
+
+.modal-title {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 29px;
+  margin-top: 0;
+  margin-bottom: 25px;
+}
+.modal-info {
+  padding: 50px 46px;
+  width: 40%;
+}
+.flat-list {
+  padding: 0;
+  list-style: none;
+  margin-top: 55px;
+}
+.flat-item {
+  margin-bottom: 10px;
+}
+.flat-link {
+  color: #635854;
+  font-size: 16px;
+  line-height: 19px;
+  text-decoration: none;
+}
+.flat-link:hover {
+  color: #3596f5;
+  text-decoration: underline;
+}
+.modal-alert {
+  font-style: italic;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: #635854;
+  margin-top: 56px;
+}
+.modal-close-button {
+  position: absolute;
+  right: 27px;
+  top: 38px;
+  cursor: pointer;
+  border: none;
+  background-color: #fff;
 }
